--- a/src/components/commons/Dropzone.scss
+++ b/src/components/commons/Dropzone.scss
@@ -4,6 +4,7 @@
   border: dotted 2px #4174cc;
   border-radius: 5px;
   height: styles.$text-item-height;
+  margin-top: 0.375em;
   padding: 0.25em;
   background-color: styles.$dropzone-background-neutral;
 }
