--- a/src/components/uncategorized/Uncategorized.scss
+++ b/src/components/uncategorized/Uncategorized.scss
@@ -2,28 +2,29 @@
 
 .uncategorized {
   margin-top: 1em;
-  padding: 0.5em 0.5em;
+  padding: 0.5em 0.5em 0.375em 0.5em;
   border-style: solid;
   border-width: 2px;
   border-color: styles.$border-color-neutral;
   border-radius: 5px;
 
   .uncategorized-heading {
-    padding: 0.7em 0.5em 0em;
+    padding: 0.5em;
     overflow-wrap: anywhere;
     font-weight: bold;
   }
 
   .uncategorized-list {
     padding: 0em 0.25em;
-    margin-bottom: 0.5em;
+    margin: 0;
     list-style-type: none;
 
     -webkit-column-count: 2;
     -moz-column-count: 2;
     column-count: 2;
+    column-gap: 0.75em;
 
-    @media screen and (max-width: styles.$small-screen-size) {
+    @media screen and (max-width: styles.$single-column-size) {
       -webkit-column-count: 1;
       -moz-column-count: 1;
       column-count: 1;
