--- a/src/styles/h5p-text-grouping.scss
+++ b/src/styles/h5p-text-grouping.scss
@@ -3,4 +3,5 @@ $border-color-neutral: #dbe2e8;
 $text-item-background-neutral: #f5f7ff;
 $dropzone-background-neutral: #f0f3fa;
 $text-item-height: 3em;
+$single-column-size: 800px;
 $small-screen-size: 640px;
